@@ -31,6 +31,7 @@ class StreamerHepRepAttribute : public virtual HEPREP::HepRepAttribute {
         bool addAttValue(std::string key, double value, int showLabel);
         bool addAttValue(std::string key, bool value, int showLabel);
         bool addAttValue(std::string key, std::vector<double> value, int showLabel);
+        bool addAttValue(std::string key, double red, double green, double blue, double alpha, int showLabel);
         HEPREP::HepRepAttValue* getAttValueFromNode(std::string lowerCaseName);
         HEPREP::HepRepAttValue* removeAttValue(std::string key);
         HEPREP::HepRepAttValue* getAttValue(std::string name);
